<resources>
    <string name="app_name">ToolBox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">搜尋標題</string>
    <string name="search_hint">提示</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string-array name="search01">
        <item>不排序</item>
        <item>按照分類排序</item>
        <item>按照價格排序</item>
    </string-array>
    <string-array name="search02">
        <item>不篩選</item>
        <item>按照日常篩選</item>
        <item>按照接送篩選</item>
        <item>按照外送篩選</item>
        <item>按照課業篩選</item>
        <item>按照修繕篩選</item>
        <item>按照除蟲篩選</item>
    </string-array>
    <string-array name="area01">
        <item>龍井區</item>
        <item>霧峰區</item>
        <item>太平區</item>
        <item>大里區</item>
        <item>中區</item>
        <item>東區</item>
        <item>南區</item>
        <item>西區</item>
        <item>北區</item>
        <item>西屯區</item>
        <item>南屯區</item>
        <item>北屯區</item>
        <item>豐原區</item>
        <item>東勢區</item>
        <item>大甲區</item>
        <item>清水區</item>
        <item>沙鹿區</item>
        <item>梧棲區</item>
        <item>后里區</item>
        <item>神岡區</item>
        <item>潭子區</item>
        <item>大雅區</item>
        <item>新社區</item>
        <item>石岡區</item>
        <item>外埔區</item>
        <item>大安區</item>
        <item>烏日區</item>
        <item>大肚區</item>
        <item>和平區</item>
    </string-array>
    <string-array name="area02">
        <item>路</item>
        <item>街</item>
    </string-array>
    <string-array name="category">
        <item>日常</item>
        <item>接送</item>
        <item>外送</item>
        <item>課業</item>
        <item>修繕</item>
        <item>除蟲</item>
        <item>其他</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_add_work">addWorkActivity</string>
    <string name="menu_main">招募/成為工具人</string>
    <string name="menu_infor">個人資料</string>
    <string name="menu_collection">收藏案件</string>
    <string name="menu_before">歷史案件</string>
    <string name="menu_about">關於</string>
    <string name="menu_send">我的案件</string>
    <string name="menu_other">其他</string>
    <string name="menu_share">分享</string>
    <string name="menu_suggest">給我們建議</string>
    <string name="menu_signout">登出</string>
    <string-array name="login_option">
        <item>@gm.cyut.edu.tw</item>
        <item>@cyut.edu.tw</item>
    </string-array>
    <string name="user_statement_title">使用聲明</string>
    <string name="user_statement">
        　　當您註冊為會員表示你已詳細閱讀及明確瞭解本軟體之服務條款、隱私權保護政策，\n
        並同意在下列情況時本軟體毋需承擔任何責任：\n
        　A、 您使用本軟體服務之風險由您個人負擔。用戶同意使用「本軟體」各項服務系基於用戶的個人\n
        意願，並同意自負任何風險，包括自「本軟體」服務中獲得之資料導致發生任何資源流失等結果。\n
        　B、「本軟體」就各項服務，不負任何明示或默示之擔保責任「本軟體」不保證各項服務之穩定、\n
        安全、無誤、及不中斷；用戶明示承擔使用本服務之所有風險及可能致生之任何損害。\n
        　C、 用戶在「本軟體」上填寫的個人資料等行為，純屬用戶個人行為，「本軟體」對其內容之真實性或完整性不負有任何責任。\n
        　D、 對於透過「本軟體」刊登之工作，「本軟體」對其交易過程，均不負任何擔保責任。\n
        用戶瞭解您透過「本軟體」所購得之服務，完全由服務提供人負全責，若有任何瑕疵或擔保責任，\n
        均與「本軟體」無關。\n
        　E、 任何由於駭客攻擊、電腦病毒侵入或發作、因政府管制而造成的暫時性關閉等影響網路正常經\n
        營之不可抗力而造成的資料洩露、丟失、被盜用或被竄改等與「本軟體」無關。\n
        　F、 由於與本軟體連結的其他網站所造成之個人資料洩露，及由此而導致的任何法律爭議和後果均\n
        與「本軟體」無關。\n
        　G、 對於用戶透過「本軟體」刊登虛假資訊、及欺騙、敲詐行為者，純屬用戶個人行為，「本軟體\n
        」對因此而産生的一切糾紛不負有任何責任！特此聲明！\n
    </string>
    <string name="toast_missdata">請勿輸入空值</string>
    <string name="email_error_title">信箱錯誤</string>
    <string name="email_error">非常抱歉！\n本App目前僅開放朝陽學生使用，\n如有疑慮請聯絡粉絲團。</string>
    <string name="email_error2">不好意思麻煩你輸入一下信箱帳號(例如：s10414102)</string>
    <string name="email_error3">請輸入s+學號即可(例如：s10414102)</string>
    <string name="phone_error_title">手機錯誤</string>
    <string name="phone_error">請檢查手機是否有誤。</string>
    <string name="idcard_error_title">身分證字號錯誤</string>
    <string name="idcard_error">請檢查身分證是否有誤。</string>
    <string name="re_error_title">輸入的密碼有誤</string>
    <string name="re_error">請再輸入一次密碼</string>
    <string name="pwd_short_title">密碼過短</string>
    <string name="pwd_short">您設定的密碼太短，超過六個字元即可</string>
    <string name="signup_ok">註冊成功，請至註冊信箱收取驗證信。</string>
    <string name="signup_error">此帳號可能已被註冊，如有疑慮請聯絡粉絲團</string>
    <string name="signup_error_title">註冊失敗</string>
    <string name="field_error_title">欄位錯誤</string>
    <string name="field_error">請檢查是否所有蘭位皆填妥。</string>
    <string name="f_pswd_title">注意事項</string>
    <string name="f_pswd_message">請先在帳號欄輸入您的帳號。</string>
    <string name="f_pswd_pbutton">已經輸入</string>
    <string name="f_pswd_nbutton">回去輸入</string>
    <string name="sendsuccess">發送成功</string>
    <string name="sendsuccess_msg">重設密碼之郵件已成功發送，\n請到您的信箱收信更改密碼。</string>
    <string name="senderror">發送失敗</string>
    <string name="senderror_msg">請確認您的信箱是否輸入正確，\n如果疑慮請聯絡粉絲團。</string>
    <string name="login_error_title">登入錯誤</string>
    <string name="login_error">如有疑慮請聯絡粉絲團。</string>
    <string name="login_error2">無此帳號，是否要以此組帳號與密碼註冊？</string>
    <string name="EmailVerified">此信箱尚未通過驗證，請至驗證信箱收信</string>
    <string name="signup">註冊</string>
    <string name="cancel">取消</string>
    <string name="title_activity_msg">Msg</string>
    <string name="choose">Choose Image</string>
    <string name="upload">Upload</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="notification_fail">Image failed to upload...</string>
    <string name="notification_share_link">Share link</string>
    <string name="notifaction_success">Successfully uploaded</string>
    <string name="notification_progress">Uploading image...</string>
    <string name="title_activity_use_state">UseState</string>
    <string-array name="area01_road">
        <item>八德街</item>
        <item>三民路</item>
        <item>大甲街</item>
        <item>大安港路</item>
        <item>大智街</item>
        <item>大發路</item>
        <item>工一路</item>
        <item>工七路</item>
        <item>工九路</item>
        <item>工二路</item>
        <item>工十路</item>
        <item>工三路</item>
        <item>工五路</item>
        <item>工六路</item>
        <item>工四路</item>
        <item>中山路</item>
        <item>中華街</item>
        <item>五福街</item>
        <item>五褔街</item>
        <item>仁愛街</item>
        <item>仁愛路</item>
        <item>孔雀路</item>
        <item>文曲路</item>
        <item>文昌街</item>
        <item>文武路</item>
        <item>日南路</item>
        <item>水美街</item>
        <item>水源路</item>
        <item>北堤西路</item>
        <item>北堤東路</item>
        <item>幼一路</item>
        <item>幼七路</item>
        <item>幼九路</item>
        <item>幼二路</item>
        <item>幼三路</item>
        <item>幼五路</item>
        <item>幼六路</item>
        <item>幼四路</item>
        <item>幼獅路</item>
        <item>民生路</item>
        <item>民權路</item>
        <item>永順街</item>
        <item>甲后路</item>
        <item>甲東路</item>
        <item>光明路</item>
        <item>如意路</item>
        <item>成功路</item>
        <item>育英路</item>
        <item>育德路</item>
        <item>和平路</item>
        <item>忠孝街</item>
        <item>東一街</item>
        <item>東九街</item>
        <item>東二街</item>
        <item>東三街</item>
        <item>東六街</item>
        <item>東安路</item>
        <item>東西七路</item>
        <item>東西八路</item>
        <item>東西五路</item>
        <item>東西六路</item>
        <item>東西四路</item>
        <item>東明路</item>
        <item>武營路</item>
        <item>金華西路</item>
        <item>金華路</item>
        <item>長安路</item>
        <item>長壽路</item>
        <item>青一路</item>
        <item>青二路</item>
        <item>青三路</item>
        <item>青年路</item>
        <item>信義路</item>
        <item>南北一路</item>
        <item>南北二路</item>
        <item>南北三路</item>
        <item>南北五路</item>
        <item>南北四路</item>
        <item>南陽街</item>
        <item>重義一路</item>
        <item>重義二路</item>
        <item>重義三路</item>
        <item>通天路</item>
        <item>復興路</item>
        <item>渭水路</item>
        <item>開元路</item>
        <item>雁門路</item>
        <item>順天路</item>
        <item>順帆路</item>
        <item>慈德路</item>
        <item>新政路</item>
        <item>新美街</item>
        <item>經國路</item>
        <item>義和一街</item>
        <item>義和二街</item>
        <item>義和三街</item>
        <item>農安路</item>
        <item>福東路</item>
        <item>福順街</item>
        <item>彈正路</item>
        <item>德興路</item>
        <item>蔣公路</item>
        <item>賢仁路</item>
        <item>黎明路</item>
        <item>橫圳街</item>
        <item>興安路</item>
        <item>錦上街</item>
        <item>錦華街</item>
        <item>龍潭路</item>
        <item>臨江路</item>
        <item>鎮政路</item>
        <item>鎮瀾街</item>
    </string-array>
    <string-array name="area02_road">
        <item>三元路</item>
        <item>大安路</item>
        <item>大安港路</item>
        <item>大安路</item>
        <item>大興路</item>
        <item>中山路</item>
        <item>中山北路</item>
        <item>中山南路</item>
        <item>中松路</item>
        <item>中海路</item>
        <item>五甲北路</item>
        <item>五甲南路</item>
        <item>北汕路</item>
        <item>田尾路</item>
        <item>甲六路</item>
        <item>安溪路</item>
        <item>東西一路</item>
        <item>東西七路</item>
        <item>東西九路</item>
        <item>東西二路</item>
        <item>東西八路</item>
        <item>東西三路</item>
        <item>東西五路</item>
        <item>東西六路</item>
        <item>東西四路</item>
        <item>松一街</item>
        <item>松七街</item>
        <item>松九街</item>
        <item>松二街</item>
        <item>松十街</item>
        <item>松三街</item>
        <item>松五街</item>
        <item>松六街</item>
        <item>松圳路</item>
        <item>南北七路</item>
        <item>南北九路</item>
        <item>南北八路</item>
        <item>南北三路</item>
        <item>南北五路</item>
        <item>南北六路</item>
        <item>南北四路</item>
        <item>南安路</item>
        <item>南埔路</item>
        <item>南海路</item>
        <item>南勢西路</item>
        <item>南勢厝路</item>
        <item>南廟路</item>
        <item>埔頭路</item>
        <item>溪洲路</item>
        <item>福安路</item>
        <item>福東一路</item>
        <item>福東二路</item>
        <item>福東路</item>
        <item>興安路</item>
        <item>龜路</item>
        <item>鎮安路</item>

    </string-array>
    <string-array name="area03_road">
        <item>大肚街</item>
        <item>大明一街</item>
        <item>大明二街</item>
        <item>大明三街</item>
        <item>大明五街</item>
        <item>大明四街</item>
        <item>大新街</item>
        <item>大德一街</item>
        <item>大德七街</item>
        <item>大德二街</item>
        <item>大德三街</item>
        <item>大德五街</item>
        <item>大德六街</item>
        <item>大德四街</item>
        <item>中山路</item>
        <item>中沙路</item>
        <item>中蔗路</item>
        <item>中龍路</item>
        <item>仁德路</item>
        <item>太平路</item>
        <item>文昌一街</item>
        <item>文昌二街</item>
        <item>文昌路</item>
        <item>王福街</item>
        <item>平和東街</item>
        <item>平和街</item>
        <item>平等街</item>
        <item>永和街</item>
        <item>永順路</item>
        <item>向上路</item>
        <item>自由路</item>
        <item>自治路</item>
        <item>沙田路</item>
        <item>育英路</item>
        <item>育樂街</item>
        <item>南榮路</item>
        <item>紙廠路</item>
        <item>追分街</item>
        <item>船頭一街</item>
        <item>船頭二街</item>
        <item>船頭三街</item>
        <item>船頭五街</item>
        <item>船頭六街</item>
        <item>博愛街</item>
        <item>華山路</item>
        <item>華昌街</item>
        <item>新興街</item>
        <item>溪洲路</item>
        <item>瑞井路</item>
        <item>萬興路</item>
        <item>遊園路</item>
        <item>榮華街</item>
        <item>福利路</item>
        <item>福華街</item>
        <item>福興街</item>
        <item>蔗南路</item>
        <item>興中路</item>
        <item>興和路</item>
        <item>營埔一街</item>
        <item>營埔二街</item>
        <item>營埔三街</item>

    </string-array>
</resources>